--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "netlify.site_id": "1c027556-49aa-49e4-a6e3-cf828c3d2efc"
 }
